# Python-for-Data-Science-Piscine-

./: .gitignore
python_0/ex00/: Hello.py
python_0/ex01/: format_ft_time.py
python_0/ex02/: find_ft_type.py
python_0/ex03/: NULL_not_found.py
python_0/ex04/: whatis.py
python_0/ex05/: building.py
python_0/ex06/: filterstring.py  ft_filter.py
python_0/ex07/: sos.py
python_0/ex08/: Loading.py  tester.py
python_0/ex09/ft-package/: LICENSE  README.md  pyproject.toml
python_0/ex09/ft-package/src/ft_package/: __about__.py  __init__.py  ft_package.py
python_0/ex09/my-package/: LICENSE.txt  README.md  pyproject.toml
python_0/ex09/my-package/src/my_package/: __about__.py  __init__.py  my_package.py
python_1 (array)/ex00/: give_bmi.py
python_1 (array)/ex01/: array2D.py
python_1 (array)/ex02/: load_image.py
python_1 (array)/ex03/: load_image.py  zoom.py
python_1 (array)/ex04/: load_image.py  rotate.py
python_1 (array)/ex05/: load_image.py  pimp_image.py
python_2 (DataTable)/ex00/: load_csv.py
python_2 (DataTable)/ex01/: aff_life.py  load_csv.py
python_2 (DataTable)/ex02/: aff_pop.py  load_csv.py
python_2 (DataTable)/ex03/: load_csv.py  projection_life.py
python_3 (OOP)/ex00/: S1E9.py
python_3 (OOP)/ex01/: S1E7.py
python_3 (OOP)/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
python_3 (OOP)/ex03/: ft_calculator.py
python_3 (OOP)/ex04/: ft_calculator.py
python_4 (DOD)/ex00/: statistics.py
python_4 (DOD)/ex01/: in_out.py
python_4 (DOD)/ex02/: callLimit.py
python_4 (DOD)/ex03/: new_student.py
