[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft-package"
version = "0.0.1"
description = 'test package'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Fatima zahra El bouaazzaoui", email = "elbouaazzaouitema@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Fatima zahra El bouaazzaoui/ft-package#readme"
Issues = "https://github.com/Fatima zahra El bouaazzaoui/ft-package/issues"
Source = "https://github.com/Fatima zahra El bouaazzaoui/ft-package"
