[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-package"
#dynamic = ["version"]
version = "0.1"
description = 'A simple test package we will add functionalities later'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "fatimzehraa", email = "elbouaazzaouitema@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fatimzehraa/my-package#readme"
Issues = "https://github.com/fatimzehraa/my-package/issues"
Source = "https://github.com/fatimzehraa/my-package"

